# rpi-pico-drum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  code.py  config.json  main.cpp  menu.json
assets/: img_to_array.py  splash.xcf
enclosure/prototype/: BottomPlate.stl  Frame.stl  TopPlate.stl  rpi-pico-drum.FCStd
hardware/: fp-lib-table  rpi-pico-drum.kicad_prl  rpi-pico-drum.kicad_pro  rpi-pico-drum.kicad_sch  sym-lib-table
hardware/lib/: rpi-pico-drum.kicad_sym
hardware/lib/adafruit/: adafruit.lib  adafruit.mod  adafruit_conversion_log.txt
hardware/lib/ky-040/: YEUTTERG_Generic.lib
include/: audio.hpp  config.hpp  display.hpp  hw_config.hpp  mixer.hpp  rotary.hpp  sample.hpp  splash_img.h  storage.hpp
lib/: menu.py
lib/pico-ss-oled/: CMakeLists.txt
src/: audio.cpp  config.cpp  coretalk.cpp  coretalk.hpp  display.cpp  display.hpp  hw_config.c  hw_config.h  mixer.cpp  rotary.cpp  rotary.hpp  rotary.pio  sample.cpp  storage.cpp
tests/: audiofx-test.py  audiomixer-test.py  midi-test.py  rotary-test.py  sdcard-test.py  ssd1306-test.py
